saving history in local storage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <form class="card">
             <div class="form-group">
               <div class="card-header">
-                <label for="search-input"><h2>Search for a City:</h2></label>
+                <label for="search-input"><h3>Search for a City:</h3></label>
               </div>
               <div class="card-body">
                 <input
@@ -42,30 +42,14 @@
                 />
                 <small id="error"></small>
                 <button type="submit" class="btn btn-primary w-100 mt-2">
-                  Search
+                  Let's Go!
                 </button>
               </div>
             </div>
           </form>
           <div class="card mt-3">
-            <div class="card-header">History</div>
-            <div class="card-body">
-              <button class="btn btn-primary w-100 mt-1">Austin</button>
-
-              <button class="btn btn-primary w-100 mt-1">Chicago</button>
-
-              <button class="btn btn-primary w-100 mt-1">New York</button>
-
-              <button class="btn btn-primary w-100 mt-1">Orlando</button>
-
-              <button class="btn btn-primary w-100 mt-1">San Francisco</button>
-
-              <button class="btn btn-primary w-100 mt-1">Seattle</button>
-
-              <button class="btn btn-primary w-100 mt-1">Denver</button>
-
-              <button class="btn btn-primary w-100 mt-1">Atlanta</button>
-            </div>
+            <div class="card-header">History (Last 10)</div>
+            <div id="history" class="card-body"></div>
           </div>
         </div>
 
