added color fx for UV index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header><h1>Your Weather Dash</h1></header>
 
-    <div class="container">
+    <div class="">
       <div class="row">
         <!-- Search bar rendered here. -->
         <div class="col-12 col-md-3 mt-3">
