--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <body>
     <header><h1>Your Weather Dash</h1></header>
 
-    <div class="">
+    <div class="container">
       <div class="row">
         <!-- Search bar rendered here. -->
-        <div class="col-12 col-md-3 mt-3">
+        <div class="col-12 col-md-4 mt-3">
           <form class="card">
             <div class="form-group">
               <div class="card-header">
@@ -48,13 +48,23 @@
             </div>
           </form>
           <div class="card mt-3">
-            <div class="card-header">History (Last 10)</div>
+            <div
+              class="
+                card-header
+                d-flex
+                justify-content-between
+                align-items-center
+              "
+            >
+              <span>History (Last 10)</span>
+              <button class="btn btn-sm" id="clear-history">Clear</button>
+            </div>
             <div id="history" class="card-body"></div>
           </div>
         </div>
 
         <!-- Weather information rendered here. -->
-        <div class="col-12 col-md-9 mt-3">
+        <div class="col-12 col-md-8 mt-3">
           <div class="card">
             <div class="card-header">
               <h2 id="city-name">Current Weather</h2>
@@ -69,7 +79,7 @@
           <div class="card mt-3">
             <div class="card-header"><h2>5-Day Forecast</h2></div>
             <div class="container">
-              <div id="forecast" class="row py-4"></div>
+              <div id="forecast" class="row py-4 justify-content-between"></div>
             </div>
           </div>
         </div>
