added dynamic images to main weather container and additional error handling

--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
             <div class="card-header">
               <h2 id="city-name">Current Weather</h2>
             </div>
-            <div class="card-body">
-              <p id="temp">Temp:</p>
-              <p id="wind">Wind:</p>
-              <p id="humidity">Humidity:</p>
-              <p id="uvindex">UV Index:</p>
+            <div class="card-body" id="weather-container">
+              <p id="temp"></p>
+              <p id="wind"></p>
+              <p id="humidity"></p>
+              <p id="uvindex"></p>
             </div>
           </div>
           <div class="card mt-3">
             <div class="card-header"><h2>5-Day Forecast</h2></div>
             <div class="container">
-              <div id="forecast" class="row py-4 justify-content-between"></div>
+              <div id="forecast" class="row py-4 justify-content-end"></div>
             </div>
           </div>
         </div>
