added transparent backgrounds to improve contrast

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
               <h2 id="city-name">Current Weather</h2>
             </div>
             <div class="card-body" id="weather-container">
-              <p id="temp"></p>
-              <p id="wind"></p>
-              <p id="humidity"></p>
-              <p id="uvindex"></p>
+              <div class="text-container">
+                <p id="temp"></p>
+                <p id="wind"></p>
+                <p id="humidity"></p>
+                <p id="uvindex"></p>
+              </div>
             </div>
           </div>
           <div class="card mt-3">
