--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="card mt-3">
             <div class="card-header"><h2>5-Day Forecast</h2></div>
             <div class="container">
-              <div id="forecast" class="row py-4 justify-content-end"></div>
+              <div id="forecast" class="row py-4 justify-content-center"></div>
             </div>
           </div>
         </div>
