fixed history duplication bug and other minor adjustments made

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
             <div class="card-body" id="weather-container">
               <div class="text-container">
-                <p id="temp"></p>
-                <p id="wind"></p>
-                <p id="humidity"></p>
-                <p id="uvindex"></p>
+                <p>Temp: <span id="temp"></span></p>
+                <p>Wind: <span id="wind"></span></p>
+                <p>Humidity: <span id="humidity"></span></p>
+                <p>UV Index: <span id="uv"></span></p>
               </div>
             </div>
           </div>
